--- a/styles.css
+++ b/styles.css
@@ -88,8 +88,6 @@ header nav .nav-bar {
     margin: 0 auto;
 }
 
-/* Make opacity 0.95 when past hero section but 1 on hover */
-
 header nav .nav-bar:hover {
     opacity: 1;
 }
@@ -129,6 +127,13 @@ header nav .nav-bar .nav-links .link::after {
 
 header nav .nav-bar .nav-links .link:hover::after {
     width: 100%;
+}
+
+.container h2 {
+    font-size: 1.7rem;
+    text-decoration: underline;
+    text-align: center;
+    margin-bottom: 3rem;
 }
 
 .home {
@@ -177,9 +182,7 @@ header nav .nav-bar .nav-links .link:hover::after {
 }
 
 .projects h2 {
-    text-align: center;
     margin-top: 3rem;
-    margin-bottom: 3rem;
     font-weight: bold;
 }
 
@@ -256,10 +259,8 @@ header nav .nav-bar .nav-links .link:hover::after {
 }
 
 .resume .container h2 {
-    text-align: center;
     color: black;
     padding-top: 1rem;
-    margin-bottom: 3rem;
 }
 
 .resume .container .resume-card {
@@ -287,11 +288,6 @@ header nav .nav-bar .nav-links .link:hover::after {
 .contact {
     background: #F0F0F0;
     padding: 3rem 0;
-}
-
-.contact h2 {
-    margin-bottom: 2rem;
-    text-align: center;
 }
 
 .contact .contact-cards {
